
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-log-analyzer"
version = "0.1.0"
description = "Open-source AI-powered log analyzer (local-first)"
authors = [{name="You"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "typer==0.12.3",
    "rich==13.7.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "torch>=2.2.0",
    "transformers==4.43.4",
    "sentence-transformers==3.0.1",
    "matplotlib==3.8.4",
    "reportlab==4.2.0",
    "tensorflow==2.16.1",
]
